<resources>
    <string name="app_name">Warehouse App</string>
    <string name="password">password</string>
    <string name="or">or</string>
    <string name="application_logo">application logo</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="username_cannot_be_empty">Username field cannot be empty.</string>
    <string name="password_cannot_be_empty">Password field cannot be empty.</string>
    <string name="passwords_are_not_the_same">Passwords are not the same.</string>
    <string name="sign_up_successful">You have successfully signed up.</string>
    <string name="network_error_message">Network connection error.</string>
    <string name="generic_error_message">Something went wrong. Please try again.</string>
    <string name="quantity_below_zero_error_message">You cannot remove more products than there in stock.</string>
    <string name="price">%.2f PLN</string>
    <string name="price_label">Price:</string>
    <string name="in_stock_label">In stock:</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="delete_product">Delete Product</string>
    <string name="delete_product_confirmation">Are you sure you want to delete this product?</string>
    <string name="products">Products</string>
    <string name="add_product">Add Product</string>
    <string name="name">Name</string>
    <string name="price_hint">Price</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="edit_product">Edit Product</string>
    <string name="cancel">Cancel</string>
    <string name="save_product">Save Product</string>
    <string name="logout">Logout</string>
    <string name="add_items">Add Items</string>
    <string name="remove_items">Remove Items</string>
    <string name="incorrect_credentials_message">Username and/or password are incorrect.</string>
    <string name="no_products_message">Swipe down to load products or click on yellow button to add a new product.</string>
    <string name="username">username</string>
    <string name="product_deleted">Product deleted.</string>
    <string name="empty_fields_message">All fields must be filled.</string>
    <string name="product_added">Product added.</string>
    <string name="product_edited">Product edited</string>
    <string name="change_quantity">Change quantity</string>
    <string name="add_items_message">Type in number of items to add.</string>
    <string name="remove_items_message">Type in number of items to remove.</string>
    <string name="quantity">Quantity</string>
    <string name="ok">ok</string>
    <string name="product_quantity_changed_message">Product quantity changed.</string>
    <string name="username_exists_message">This username already exists.</string>
    <string name="synchronize">synchronize</string>
    <string name="synchronization_results">Synchronization Results</string>
    <string name="request">Operation: %s, product id: %d, name: %s, manufacturer: %s, price: %.2f, quantity: %d.</string>
    <string name="request_with_delta">Operation: %s, product id: %d, name: %s, manufacturer: %s, price: %.2f, quantity: %d, quantity change= %d.</string>
    <string name="successful_sync">Synchronization finished.</string>
    <string name="request_header">Request:</string>
    <string name="response_message_header">Response message:</string>
    <string name="online_mode">Online Mode</string>
    <string name="change_warehouse">Change Warehouse</string>
</resources>
