<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.dorotatomczak.warehouseapp.ui.util.Converter" />

        <variable
            name="editProductViewModel"
            type="com.dorotatomczak.warehouseapp.ui.editproduct.EditProductViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/linearLayoutEditProduct"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.editproduct.EditProductActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme">

            <include layout="@layout/toolbar" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:text="@={editProductViewModel.product.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/manufacturer">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:text="@={editProductViewModel.product.manufacturer}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/price_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:text="@={Converter.floatToString(editProductViewModel.product.price)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_grey_background"
                android:forceDarkAllowed="false"
                android:onClick="@{() -> editProductViewModel.onCancel()}"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:forceDarkAllowed="false"
                android:onClick="@{() -> editProductViewModel.onEditProduct()}"
                android:text="@string/save_product"
                android:textColor="@android:color/white"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

    </LinearLayout>

</layout>
